# py_mqtt_audio_player

./: .gitignore  LICENSE  README.md  build.py  config.yaml  main.py  pyproject.toml  setup.bat  setup.sh
bat_scripts/: README.md  fs_test_audio.bat  player_start_kill_commands.txt  start-music-player-1.bat  start-music-player-2.bat  start-sfx-player-1.bat  start-sfx-player-2.bat  start-sys-sound-player-1.bat  start-sys-sound-player-2.bat  start-voice-player-1.bat  start-voice-player-2.bat  start_shaker_player.bat
config/: config_loader.py  simple_logger.py
input/: keyboard.py
mqtt/: client.py
player/: core.py  file_manager.py  utils.py
tools/: .gitignore  01_config_sound_device.py  02_test_sound_device.py  audio_diagnostic_M-9-16.py  check_version.py  test_sharing_M-9-16.py
tools/dummy_mqtt_audio_player_controller/: README.md  dummy_mqtt_audio_player_controller.pde
tools/dummy_mqtt_audio_player_controller/linux-amd64/: dummy_mqtt_audio_player_controller
tools/dummy_mqtt_audio_player_controller/macos-aarch64/dummy_mqtt_audio_player_controller.app/Contents/: Info.plist
tools/dummy_mqtt_audio_player_controller/macos-aarch64/dummy_mqtt_audio_player_controller.app/Contents/MacOS/: dummy_mqtt_audio_player_controller
tools/dummy_mqtt_audio_player_controller/macos-aarch64/dummy_mqtt_audio_player_controller.app/Contents/_CodeSignature/: CodeResources
tools/dummy_mqtt_audio_player_controller/macos-aarch64/source/: dummy_mqtt_audio_player_controller.java
